<resources>
    <string name="app_name">UberFamiliy</string>
    <string name="button_Pick_Me_Up">Pick me up</string>
    <string name="registerLink"><u>register</u></string>
    <string name="signInLink"><u>Sign in</u></string>
    <string name="sign_in">Sign in</string>
    <string name="password_hint">Password</string>
    <string name="fullName">Full Name</string>
    <string name="username">Username</string>
    <string name="loadPicture"><b>Load picture</b></string>
    <string name="takeAPicture"><b>Take a picture</b></string>
    <string name="register">Register</string>
    <string name="rememberMe">Remember me</string>
    <string name="usernames"><b> Usernames:</b></string>
    <string name="userSearch"><b>User search</b></string>
    <string name="addFriend"><b>Add Friend</b></string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
